# cbr-user-data

./: .gitmodules  README.md  pyproject.toml  requirements-test.txt  requirements.txt  server__fastapi__user_data.py  start-local-server.sh
.github/actions/aws__deploy-lambda/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_user_data/fast_api/: Fast_API__User_Data.py  User_Data__Fast_API.py
cbr_user_data/fast_api/current_user/: Current_User__Fast_API.py
cbr_user_data/fast_api/current_user/routes/: Routes__User_Data.py
cbr_user_data/fast_api/routes/: Routes__Chats.py  Routes__Info.py  Routes__Session.py  Routes__User.py  Routes__User_Data.py
cbr_user_data/lambdas/: handler.py
cbr_user_data/user_data/decorators/: with_db_user.py
cbr_user_data/utils/: Version.py
deploy/docker/cbr-user-data/: Dockerfile  docker-compose.yml  start.sh
deploy/docker/cbr_xyz__from_pip/: Dockerfile
deploy/lambdas/: Deploy_Lambda__User_Data.py  test_Deploy_Lambda__User_Data.py
tests/integration/: fast_api_objs_for_tests.py  user_data__objs_for_tests.py
tests/integration/current_user/routes/: test_Routes__User_Data.py  test__int__Routes__User_Data.py
tests/integration/fast_api/routes/: test__client__Routes__Info.py  test__client__Routes__User.py  test__int__Routes__User_Data.py
tests/unit/fast_api/routes/: test__Routes__Info.py
tests/unit/utils/: test_Version.py
