[tool.poetry]
name        = "cbr_user_data"
version     = "v0.8.1"
description = "CBR - User Data"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-user-data"
repository  = "https://github.com/the-cyber-boardroom/cbr-user-data"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
