[tool.poetry]
name        = "cbr_user_data"
version     = "v0.2.2"
description = "CBR - User Data"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-user-data"
repository  = "https://github.com/the-cyber-boardroom/cbr-user-data"

[tool.poetry.dependencies]
python          = "^3.11"
osbot-aws       = "*"
osbot-fast-api  = "*"
mangum          = "*"
httpx           = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
